# aya_telementry

./: Cargo.toml  README.md
aya-telementry/: Cargo.toml  build.rs
aya-telementry-common/: Cargo.toml
aya-telementry-common/src/: lib.rs
aya-telementry-ebpf/: Cargo.toml
aya-telementry-ebpf/src/: common.rs  main.rs
aya-telementry/src/: main.rs
