[package]
name = "aya-telementry-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
aya-telementry-common = { path = "../aya-telementry-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "aya-telementry"
path = "src/main.rs"
